// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletPrimaryDotMeasure 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartBulletPrimaryDotMeasure 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    >
      <g>
        <path
          d="M 225, 89.8
      m -6, 0
      a 6, 6 0 1,0 12,0
      a 6, 6 0 1,0 -12,0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); opacity: 1; stroke: var(--pf-chart-scatter--data--stroke--Color, transparent); stroke-width: 0;"
        />
      </g>
      <g>
        <path
          d="M 225, 89.8
      m -6, 0
      a 6, 6 0 1,0 12,0
      a 6, 6 0 1,0 -12,0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); opacity: 1; stroke: var(--pf-chart-scatter--data--stroke--Color, transparent); stroke-width: 0;"
        />
      </g>
      <g>
        <path
          d="M 225, 89.8
      m -6, 0
      a 6, 6 0 1,0 12,0
      a 6, 6 0 1,0 -12,0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); opacity: 1; stroke: var(--pf-chart-scatter--data--stroke--Color, transparent); stroke-width: 0;"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;
